# Narvo

./: .gitignore  README.md  example.ts  expected_results.json  extract_expected.js
.github/workflows/: ci.yml
javascript/: README.md  example.ts  package-lock.json  package.json
javascript/scripts/: extract_expected.js
javascript/src/: index.ts  types.ts
python/: MANIFEST.in  README.md  pyproject.toml
python/src/quorlen/: __init__.py  dictionary.json  scorer.py  types.py
python/tests/: test_quorlen.py
